interpreter-janeklang/tests/bad/05_ifWithInt.janek
int main(){
    if(3){
        420;
    }
    return 0;
}